--- a/News.txt
+++ b/News.txt
@@ -1,2 +1,1 @@
-Navillera Mail V1.0.1.5 is out! Now easy to setup multiple target!
-Navillera Mail created by Yurani Corporation
+Navillera Mail V1.0.1.5 is out! Now easy to set multiple target!
