--- a/News.txt
+++ b/News.txt
@@ -1,2 +1,1 @@
-Navillera Mail V1.0.1.6 is out! More Attachment, more fun!
-Mega update will be updated soon!
+Navillera Mail V1.0.1.8 is out! Premium Update!
